[gd_scene load_steps=7 format=3 uid="uid://d1vfb8d7w1w7x"]

[ext_resource type="Script" uid="uid://b0jpascotmah3" path="res://스테이지3/stage_selection.gd" id="1_abcde"]
[ext_resource type="Texture2D" uid="uid://70b7dfxwwmay" path="res://스테이지3/Img/pages/stageSelect.png" id="2_fghij"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_normal"]
bg_color = Color(0.15, 0.15, 0.15, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5, 0.5, 0.5, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_hover"]
bg_color = Color(0.25, 0.25, 0.25, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.7, 0.7, 0.7, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_pressed"]
bg_color = Color(0.05, 0.05, 0.05, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.3, 0.3, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hover"]
bg_color = Color(1, 1, 1, 0.2)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 0.5)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id="Theme_buttons"]
Button/styles/hover = SubResource("StyleBoxFlat_hover")
Button/styles/normal = null

[node name="StageSelection" type="Node2D"]
script = ExtResource("1_abcde")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_fghij")
expand_mode = 1

[node name="Stage1Button" type="Button" parent="."]
offset_left = 120.0
offset_top = 250.0
offset_right = 320.0
offset_bottom = 450.0
focus_mode = 0
mouse_filter = 1
theme = SubResource("Theme_buttons")
theme_override_font_sizes/font_size = 32
flat = true

[node name="Stage2Button" type="Button" parent="."]
offset_left = 476.0
offset_top = 250.0
offset_right = 676.0
offset_bottom = 450.0
focus_mode = 0
mouse_filter = 1
theme = SubResource("Theme_buttons")
theme_override_font_sizes/font_size = 32
flat = true

[node name="Stage3Button" type="Button" parent="."]
offset_left = 832.0
offset_top = 250.0
offset_right = 1032.0
offset_bottom = 450.0
focus_mode = 0
mouse_filter = 1
theme = SubResource("Theme_buttons")
theme_override_font_sizes/font_size = 32
flat = true

[node name="PartSelectionButton" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -340.0
offset_top = -70.0
offset_right = -190.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0
mouse_filter = 1
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_pressed")
text = "파츠 선택"

[node name="OptionButton" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -170.0
offset_top = -70.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0
mouse_filter = 1
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_pressed")
text = "옵션"

[connection signal="gui_input" from="Stage1Button" to="." method="_on_stage_1_button_gui_input"]
[connection signal="gui_input" from="Stage2Button" to="." method="_on_stage_2_button_gui_input"]
[connection signal="gui_input" from="Stage3Button" to="." method="_on_stage_3_button_gui_input"]
[connection signal="pressed" from="PartSelectionButton" to="." method="_on_part_selection_button_pressed"]
[connection signal="pressed" from="OptionButton" to="." method="_on_option_button_pressed"]